--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,7 @@ p {
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
   font-size: 1.25em;
 }
+
+change-css {
+  display: block;  
+}
